<resources>
    <string name="app_name">FrontTossRemote</string>
    <string name="PawImage">RIT paw image</string>
    <string name="TigerImage">RIT tiger image</string>
    <string name="ConnecttoDevice">Connect to Device</string>
    <string name="FrontTossMachine">Front Toss Machine</string>
    <string name="SelectMode">Select Mode</string>
    <string name="PresetMode">Preset Mode</string>
    <string name="RandomMode">Random Mode</string>
    <string name="OnDemandMode">On Demand Mode</string>
    <string name="NumberofBalls">Number of Baseballs</string>
    <string name="EnterNumber">Enter Number</string>
    <string name="Number1">1</string>
    <string name="Number2">2</string>
    <string name="Number3">3</string>
    <string name="Number6">6</string>
    <string name="Number5">5</string>
    <string name="Number4">4</string>
    <string name="Number7">7</string>
    <string name="Number8">8</string>
    <string name="Number9">9</string>
    <string name="ZoneSelect">Strike Zone Select</string>
    <string name="Enter">Enter</string>
    <string name="LaunchingBalls">Launching Baseballs...</string>
    <string name="EXIT">EXIT</string>
    <string name="ListMode">List Mode</string>
    <string name="list_mode">List Mode</string>
    <string name="_0">0</string>
    <string name="top_right">Top Right:</string>
    <string name="top_center">Top Center:</string>
    <string name="top_left">Top Left:</string>
    <string name="center_right">Center Right:</string>
    <string name="center_center">Center Center:</string>
    <string name="center_left">Center Left:</string>
    <string name="bottom_right">Bottom Right:</string>
    <string name="bottom_center">Bottom Center:</string>
    <string name="bottom_left">Bottom Left:</string>
    <string name="hash">#</string>
</resources>