<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".FrontPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:gravity="center"
        android:text="@string/FrontTossMachine"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:id="@+id/title"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:id="@+id/Bluetooth_Connection"
        android:layout_below="@id/title"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/ConnecttoDevice"
        android:backgroundTint="#F76902"/>

    <ImageView
        android:contentDescription="@string/TigerImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/rit_tigers_logo"/>

    <ImageView
        android:contentDescription="@string/PawImage"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/app_spirit_paw"/>


</RelativeLayout>