<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/app_background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ListPage">

        <TextView
            android:id="@+id/ListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="61dp"
            android:layout_marginEnd="36dp"
            android:text="@string/list_mode"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/TopRightEntry"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/TopRightEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="81dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hash"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/TopRight"
            app:layout_constraintTop_toBottomOf="@+id/ListTitle" />

        <TextView
            android:id="@+id/TopRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="72dp"
            android:text="@string/top_right"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toStartOf="@+id/TopRightEntry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ListTitle" />

        <EditText
            android:id="@+id/TopCenterEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="81dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hash"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/TopCenter"
            app:layout_constraintTop_toBottomOf="@+id/TopRightEntry" />

        <TextView
            android:id="@+id/TopCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="53dp"
            android:text="@string/top_center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toStartOf="@+id/TopCenterEntry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TopRight" />

        <EditText
            android:id="@+id/TopLeftEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="81dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hash"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/TopLeft"
            app:layout_constraintTop_toBottomOf="@+id/TopCenterEntry" />

        <TextView
            android:id="@+id/TopLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="90dp"
            android:text="@string/top_left"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toStartOf="@+id/TopLeftEntry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TopCenter" />

        <EditText
            android:id="@+id/CenterRightEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="81dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hash"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/CenterRight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/CenterRight" />

        <TextView
            android:id="@+id/CenterRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:text="@string/center_right"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toStartOf="@+id/CenterRightEntry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TopLeft" />

        <EditText
            android:id="@+id/CenterCenterEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="81dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hash"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/CenterCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/CenterCenter" />

        <TextView
            android:id="@+id/CenterCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="13dp"
            android:text="@string/center_center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toStartOf="@+id/CenterCenterEntry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CenterRightEntry" />

        <EditText
            android:id="@+id/CenterLeftEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="81dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hash"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/CenterLeft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/CenterLeft" />

        <TextView
            android:id="@+id/CenterLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:text="@string/center_left"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toStartOf="@+id/CenterLeftEntry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CenterCenter" />

        <EditText
            android:id="@+id/BottomRightEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="81dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hash"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/BottomRight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/BottomRight" />

        <TextView
            android:id="@+id/BottomRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="23dp"
            android:text="@string/bottom_right"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toStartOf="@+id/BottomRightEntry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CenterLeftEntry" />

        <EditText
            android:id="@+id/BottomCenterEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="81dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hash"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"

            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/BottomCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/BottomCenter" />

        <TextView
            android:id="@+id/BottomCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:text="@string/bottom_center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toStartOf="@+id/BottomCenterEntry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BottomRightEntry" />

        <EditText
            android:id="@+id/BottomLeftEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="81dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hash"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/BottomLeft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/BottomLeft" />

        <TextView
            android:id="@+id/BottomLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="41dp"
            android:text="@string/bottom_left"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toStartOf="@+id/BottomLeftEntry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BottomCenter" />

        <Button
            android:id="@+id/Enter2"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="104dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#F76902"
            android:text="@string/Enter"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BottomLeft" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
